--- a/src/style.css
+++ b/src/style.css
@@ -118,10 +118,25 @@ h3 {
 
 .projects {
   margin-top: 250px;
+  opacity: 0;
+  animation: ani 0s ease-in-out forwards 0s;
 }
 
-.projects-header,
-.about-me-header {
+@keyframes ani {
+  100% {
+    opacity: 1;
+  }
+  from {
+    background: -webkit-linear-gradient(101deg, #1daf7c, #9900b4);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  to {
+    font-family: var(--heading-font-family);
+  }
+}
+
+.header {
   margin-bottom: 50px;
   margin-top: 50px;
   font-family: var(--heading-font-family);
@@ -142,17 +157,18 @@ h3 {
   border-radius: 10px;
   padding: 8px;
   text-align: center;
+   font-family:Georgia, 'Times New Roman', Times, serif;
+ 
 }
 
 #hero-img,
 .project-img-bg {
-  border: solid 7px transparent;
+  border: solid 10px transparent;
   background-image: url(/src/images/body.png),
     linear-gradient(rgba(255, 10, 10, 0), rgba(255, 255, 255, 0)),
     linear-gradient(101deg, #bb85c8, #84baa7);
   background-origin: border-box;
-  padding: 5px;
-  border-radius: 10px;
+   border-radius: 10px;
 }
 
 #project-img {
@@ -164,27 +180,27 @@ h4 {
   font-weight: 700;
   font-size: 32px;
   letter-spacing: 1px;
-  margin-top: 10px;
   background: -webkit-linear-gradient(101deg, #028063, #b0029e);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 p {
-  font-size: 20px;
+  font-size: 19px;
+  font-weight: 400;
 }
 
 .primary-link {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 17px;
   text-decoration: none;
   color: var(--main-color);
-  font-family: var(--heading-font-family);
+  font-family:Georgia, 'Times New Roman', Times, serif;
   letter-spacing: 1px;
   margin-top: 50px;
-  padding: 15px 30px;
+  padding: 14px 25px;
   border-radius: 30px;
-  box-shadow: 2px 100px 1px rgb(231, 248, 245) inset;
+  box-shadow: 2px 100px 1px rgb(238, 250, 248) inset;
   border: solid 3px transparent;
   background-image: linear-gradient(
       rgba(255, 10, 10, 0),
@@ -203,15 +219,15 @@ p {
       rgba(255, 255, 255, 0)
     ),
     linear-gradient(101deg, #b26fc3, #7abaa4);
-  color: rgb(255, 255, 255);
+  color: rgb(192, 251, 244);
 }
 
 #hero-img {
-  border-radius: 50%;
-  float: right;
+  border-radius: 5%;
   display: block;
-  margin: 0px 0px 20px;
+  margin: 0 auto;
   width: 100%;
+  margin-bottom: 10px;
 }
 
 .projects-link {
@@ -273,8 +289,7 @@ p {
     font-size: 28px;
   }
 
-  .projects-header,
-  .about-me-header {
+  .header {
     margin-top: 20px;
     font-weight: 700;
     font-size: 40px;
@@ -299,5 +314,28 @@ p {
   .primary-link {
     font-size: 14px;
     padding: 10px 20px;
+  }
+
+  .icons-header {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 25px;
+  letter-spacing: 1px;
+
+}
+}
+
+@media (max-width: 768px) {
+  #hero-img {
+ width: 50%;
+}
+.icons {
+   font-size: 11px;
+   margin: 0 auto;
+  }
+
+  .icons .img-fluid{
+   margin-top: 7px;
   }
 }
