--- a/src/style.css
+++ b/src/style.css
@@ -137,8 +137,8 @@ h3 {
 }
 
 .header {
-  margin-bottom: 50px;
-  margin-top: 50px;
+  margin-bottom: 30px;
+  margin-top: 30px;
   font-family: var(--heading-font-family);
   font-weight: 800;
   font-size: 50px;
@@ -157,20 +157,18 @@ h3 {
   border-radius: 10px;
   padding: 8px;
   text-align: center;
-   font-family:Georgia, 'Times New Roman', Times, serif;
- 
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
-
-#hero-img,
 .project-img-bg {
   border: solid 10px transparent;
   background-image: url(/src/images/body.png),
     linear-gradient(rgba(255, 10, 10, 0), rgba(255, 255, 255, 0)),
     linear-gradient(101deg, #bb85c8, #84baa7);
   background-origin: border-box;
-   border-radius: 10px;
+  border-radius: 10px;
 }
 
+#hero-img,
 #project-img {
   border-radius: 10px;
 }
@@ -188,6 +186,7 @@ h4 {
 p {
   font-size: 19px;
   font-weight: 400;
+  letter-spacing: 1px;
 }
 
 .primary-link {
@@ -195,7 +194,7 @@ p {
   font-size: 17px;
   text-decoration: none;
   color: var(--main-color);
-  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
   letter-spacing: 1px;
   margin-top: 50px;
   padding: 14px 25px;
@@ -223,20 +222,20 @@ p {
 }
 
 #hero-img {
-  border-radius: 5%;
   display: block;
   margin: 0 auto;
   width: 100%;
-  margin-bottom: 10px;
 }
 
-.projects-link {
+.projects-link,
+.contact-link {
   text-decoration: none;
   color: var(--main-color);
   font-weight: 700;
   opacity: 0.9;
 }
 
+.contact-link:hover,
 .projects-link:hover {
   background: -webkit-linear-gradient(101deg, #1daf7c, #9900b4);
   -webkit-background-clip: text;
@@ -245,14 +244,12 @@ p {
 }
 
 .icons-header {
-  color: var(--main-color);
-  margin-top: 40px;
-  margin-bottom: 10px;
   font-family: var(--heading-font-family);
   font-weight: 700;
-  font-size: 28px;
+  font-size: 2px;
   letter-spacing: 1px;
-  opacity: 0.9;
+  background: -webkit-linear-gradient(101deg, #028063, #b0029e);
+  -webkit-text-fill-color: transparent;
 }
 
 .icons {
@@ -262,6 +259,7 @@ p {
   color: var(--main-color);
   font-family: var(--secondary-font-family);
   font-size: 14px;
+  text-align: center;
 }
 
 @media (max-width: 900px) {
@@ -300,11 +298,13 @@ p {
   }
 
   .project-img-bg {
-    margin-top: 20px;
+    display: block;
+    margin: 0 auto;
   }
 
   h4 {
     font-size: 24px;
+    margin-top: 20px;
   }
 
   p {
@@ -315,27 +315,31 @@ p {
     font-size: 14px;
     padding: 10px 20px;
   }
+  .project-img-bg#hero {
+    width: 70%;
+  }
 
   .icons-header {
-  margin-top: 30px;
-  margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 25px;
-  letter-spacing: 1px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 25px;
+    letter-spacing: 1px;
+  }
 
-}
+  .icons {
+    font-size: 11px;
+    margin: 0 auto;
+  }
 }
 
 @media (max-width: 768px) {
-  #hero-img {
- width: 50%;
-}
-.icons {
-   font-size: 11px;
-   margin: 0 auto;
+  .icons {
+    font-size: 11px;
+    margin: 0 auto;
   }
 
-  .icons .img-fluid{
-   margin-top: 7px;
+  .icons .img-fluid {
+    margin-top: 7px;
   }
 }
