--- a/src/style.css
+++ b/src/style.css
@@ -141,8 +141,8 @@ h3 {
 }
 
 .header {
-  margin-bottom: 30px;
-  margin-top: 30px;
+  margin-bottom: 20px;
+  margin-top: 60px!important;
   font-family: var(--heading-font-family);
   font-weight: 800;
   font-size: 50px;
