--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,33 @@ body {
   color: var(--main-color);
 }
 
+.navbar{
+  border-image-width: 0 0 5px 0 !important;
+  -webkit-border-image: -webkit-linear-gradient(to left,#79cc9e 0%,#beedec 25%,#c5ceff 50%,#cabd96 75%,#b591c7 100%);
+     border-image: linear-gradient(to left,#79cc9e 0%,#beedec 25%,#c5ceff 50%,#cabd96 75%,#b591c7 100%);
+ border-image-slice:1;
+     border-bottom: 1px solid #ccc;
+    background-color: #fff;
+    box-shadow: 0 0.15em 0.35em 0 rgb(0 0 0 / 14%);
+    transform: translate3d(0, 0, 0);
+     box-sizing: border-box;
+}
+
+.navbar-brand,
+.nav-link{
+  background: -webkit-linear-gradient(101deg, #1daf7c, #9900b4);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 700;
+ }
+
+ .navbar-toggler{
+  background: -webkit-linear-gradient(101deg, #d3f4e8, #f2d9f7);
+  -webkit-text-fill-color: transparent;
+
+}
+ 
+
 .hero {
   margin-top: 120px;
   text-align: center;
@@ -291,7 +318,7 @@ p {
   padding: 1px;
     }
 
-    .secondary-link {
+  .secondary-link {
   font-weight: 500;
   font-size: 17px;
   text-align: center;
