--- a/src/style.css
+++ b/src/style.css
@@ -33,10 +33,8 @@ body {
  .navbar-toggler{
   background: -webkit-linear-gradient(101deg, #d3f4e8, #f2d9f7);
   -webkit-text-fill-color: transparent;
-
 }
  
-
 .hero {
   margin-top: 120px;
   text-align: center;
@@ -48,22 +46,6 @@ h1 {
   font-family: var(--heading-font-family);
   font-weight: 700;
   font-size: 75px;
-}
-
-h1:hover {
-  background: -webkit-linear-gradient(101deg, #1daf7c, #9900b4);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  cursor: pointer;
-}
-
-#header-linkedin-link{
-  color: var(--main-color);
-   text-decoration: none;
-}
-
-#header-linkedin-link:hover{
- opacity: 0.8;
 }
 
 h2 {
@@ -159,6 +141,8 @@ h3 {
   padding: 8px;
   text-align: center;
   font-family: Georgia, "Times New Roman", Times, serif;
+   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3)!important;
+
 }
 
 .project-img-bg {
@@ -168,6 +152,7 @@ h3 {
     linear-gradient(101deg, #bb85c8, #84baa7);
   background-origin: border-box;
   border-radius: 10px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3)!important;
 }
 
 .project-img-bg2 {
@@ -177,6 +162,7 @@ h3 {
     linear-gradient(101deg, #f9e6fe, #dbfbf0);
   background-origin: border-box;
   border-radius: 10px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3)!important;
 }
 
 #hero-img,
@@ -327,7 +313,7 @@ p {
   font-family: Georgia, "Times New Roman", Times, serif;
   letter-spacing: 1px;
   margin-top: 10px;
-  padding: 2px 2px;
+  padding: 1px 2px;
   border-radius: 8px;
   box-shadow: 1px 1px 100px rgb(238, 250, 248) inset;
   border: solid 2px transparent;
@@ -347,6 +333,10 @@ p {
     ),
     linear-gradient(101deg, #b26fc3, #7abaa4);
     opacity: 0.9;
+  }
+
+  .btn-shadow{
+  
   }
 
 @media (max-width: 900px) {
