--- a/src/style.css
+++ b/src/style.css
@@ -10,33 +10,46 @@ body {
   color: var(--main-color);
 }
 
-.navbar{
+.navbar {
   border-image-width: 0 0 5px 0 !important;
-  -webkit-border-image: -webkit-linear-gradient(to left,#79cc9e 0%,#beedec 25%,#c5ceff 50%,#cabd96 75%,#b591c7 100%);
-     border-image: linear-gradient(to left,#79cc9e 0%,#beedec 25%,#c5ceff 50%,#cabd96 75%,#b591c7 100%);
- border-image-slice:1;
-     border-bottom: 1px solid #ccc;
-    background-color: rgb(230, 250, 250);
-    box-shadow: 0 0.15em 0.35em 0 rgb(0 0 0 / 14%);
-    transform: translate3d(0, 0, 0);
-     box-sizing: border-box;
+  -webkit-border-image: -webkit-linear-gradient(
+    to left,
+    #79cc9e 0%,
+    #beedec 25%,
+    #c5ceff 50%,
+    #cabd96 75%,
+    #b591c7 100%
+  );
+  border-image: linear-gradient(
+    to left,
+    #79cc9e 0%,
+    #beedec 25%,
+    #c5ceff 50%,
+    #cabd96 75%,
+    #b591c7 100%
+  );
+  border-image-slice: 1;
+  border-bottom: 1px solid #ccc;
+  background-color: rgb(230, 250, 250);
+  box-shadow: 0 0.15em 0.35em 0 rgb(0 0 0 / 14%);
+  transform: translate3d(0, 0, 0);
+  box-sizing: border-box;
 }
 
 .navbar-brand,
-.nav-link{
+.nav-link {
   background: -webkit-linear-gradient(101deg, #1daf7c, #9900b4);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 700;
- }
+}
 
- .navbar-toggler{
+.navbar-toggler {
   background: -webkit-linear-gradient(101deg, #d3f4e8, #f2d9f7);
   -webkit-text-fill-color: transparent;
 }
- 
+
 .hero {
-  margin-top: 120px;
   text-align: center;
   line-height: 1.5;
   background: transparent;
@@ -85,9 +98,8 @@ h3 {
   }
 }
 
-#about-hero-link {
-  opacity: 0;
-  animation: anim 2s forwards 1s;
+#about-hero-link{
+  animation: anim 2.5s ease-in-out forwards 0s;
 }
 
 @keyframes anim {
@@ -96,26 +108,6 @@ h3 {
   }
   100% {
     opacity: 1;
-  }
-}
-
-.projects {
-  margin-top: 250px;
-  opacity: 0;
-  animation: ani 2s ease-in-out forwards 1s;
-}
-
-@keyframes ani {
-  100% {
-    opacity: 1;
-  }
-  from {
-    background: -webkit-linear-gradient(101deg, #1daf7c, #9900b4);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  to {
-    font-family: var(--heading-font-family);
   }
 }
 
@@ -141,8 +133,7 @@ h3 {
   padding: 8px;
   text-align: center;
   font-family: Georgia, "Times New Roman", Times, serif;
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3)!important;
-
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3) !important;
 }
 
 .project-img-bg {
@@ -152,17 +143,23 @@ h3 {
     linear-gradient(101deg, #bb85c8, #84baa7);
   background-origin: border-box;
   border-radius: 10px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3)!important;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3) !important;
 }
 
 .project-img-bg2 {
   border: solid 10px transparent;
-  background-image: 
-    linear-gradient(rgba(255, 10, 10, 0), rgba(255, 255, 255, 0)),
+  background-image: linear-gradient(
+      rgba(255, 10, 10, 0),
+      rgba(255, 255, 255, 0)
+    ),
     linear-gradient(101deg, #f9e6fe, #dbfbf0);
   background-origin: border-box;
   border-radius: 10px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3)!important;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3) !important;
+}
+
+#row-about-me-page {
+  margin-top: 0px;
 }
 
 #hero-img,
@@ -208,14 +205,14 @@ p {
 
 .primary-link:hover {
   box-shadow: 0px 0px 0px rgb(231, 248, 245) inset;
-   background-image: linear-gradient(
+  background-image: linear-gradient(
       rgba(255, 10, 10, 0),
       rgba(255, 255, 255, 0)
     ),
     linear-gradient(101deg, #b77ac6, #83bba7);
-    color: var(--main-color);
-    opacity: 0.8;
- }
+  color: var(--main-color);
+  opacity: 0.8;
+}
 
 #hero-img {
   display: block;
@@ -258,16 +255,22 @@ p {
   text-align: center;
 }
 
-#text-header{
-  font-size: 32px;
+#text-header-homepage{
+   margin-top: 250px!important; 
 }
 
-.row#contacts{
+#text-header {
+   margin-top: 30px;   
+   margin-bottom: 30px;
+   font-size: 32px;
+}
+
+.row#contacts {
   display: flex;
   flex-direction: column;
-   font-size: 30px;
+  font-size: 30px;
   color: #272142;
-   font-family: var(--heading-font-family);
+  font-family: var(--heading-font-family);
   font-weight: 700;
 }
 
@@ -279,7 +282,7 @@ p {
   background: -webkit-linear-gradient(101deg, #1daf7c, #9900b4);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-   font-family: var(--heading-font-family);
+  font-family: var(--heading-font-family);
   font-weight: 700;
   font-size: 35px;
   margin-bottom: 30px;
@@ -292,19 +295,23 @@ p {
   opacity: 0.7;
 }
 
-#btn-follow-projects{
+#facebook-link {
+  margin-bottom: 93px!important;
+}
+
+#btn-follow-projects {
   text-decoration: none;
   font-family: var(--default-font-family);
   color: var(--main-color);
-   }
+}
 
-  #par-follow-projects{
- font-weight: 500;
+#par-follow-projects {
+  font-weight: 500;
   font-size: 17px;
   padding: 1px;
-    }
+}
 
-  .secondary-link {
+.secondary-link {
   font-weight: 500;
   font-size: 17px;
   text-align: center;
@@ -327,17 +334,29 @@ p {
 
 .secondary-link:hover {
   box-shadow: 0px 0px 0px rgb(231, 248, 245) inset;
-   background-image: linear-gradient(
+  background-image: linear-gradient(
       rgba(255, 10, 10, 0),
       rgba(255, 255, 255, 0)
     ),
     linear-gradient(101deg, #b26fc3, #7abaa4);
-    opacity: 0.9;
-  }
+  opacity: 0.9;
+}
 
-  .btn-shadow{
-  
-  }
+footer .gitHub-link,
+footer .email-link,
+footer .facebook-link,
+footer .linkedin-link {
+  margin-bottom: 0px!important;
+  font-size: 20px;
+}
+
+#footer{
+   text-decoration: none;
+  background: -webkit-linear-gradient(101deg, #199a6d, #85019c);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+   font-size: 18px;
+}
 
 @media (max-width: 900px) {
   .welcome {
@@ -406,24 +425,26 @@ p {
 
   .icons {
     font-size: 11px;
-    margin: 0 auto;
   }
 
-#text-header{
-  font-size: 25px;
+#text-header-homepage{
+   margin-top: 290px!important; 
 }
 
-.row#contacts{
-     font-size: 25px;
-}
+  #text-header {
+    font-size: 25px;
+  }
 
-.gitHub-link,
-.email-link,
-.facebook-link,
-.linkedin-link {
-  font-size: 33px;
-}
+  .row#contacts {
+    font-size: 25px;
+  }
 
+  .gitHub-link,
+  .email-link,
+  .facebook-link,
+  .linkedin-link {
+    font-size: 33px;
+  }
 }
 
 @media (max-width: 768px) {
