--- a/src/style.css
+++ b/src/style.css
@@ -359,10 +359,15 @@ footer .linkedin-link {
 }
 
 @media (max-width: 900px) {
-  .welcome {
-    margin-top: 100px;
-    font-size: 50px;
-  }
+.navbar-brand,
+.nav-link {
+  font-weight: 500;
+  font-size: 17px;
+}
+
+.navbar-toggler {
+ font-size: 85%;
+}
 
   .hero {
     text-align: center;
