--- a/src/style.css
+++ b/src/style.css
@@ -11,23 +11,21 @@ body {
 }
 
 .navbar {
-  border-image-width: 0 0 5px 0 !important;
+  border-image-width: 0 0 3px 0 !important;
   -webkit-border-image: -webkit-linear-gradient(
     to left,
-    #79cc9e 0%,
-    #beedec 25%,
-    #c5ceff 50%,
-    #cabd96 75%,
-    #b591c7 100%
-  );
+   #79cc9e 0%,
+    #89bcbc 25%,
+    #bb9eea 50%,
+    #ca96b9 75%,
+    #c791c4 100%);
   border-image: linear-gradient(
     to left,
-    #79cc9e 0%,
-    #beedec 25%,
-    #c5ceff 50%,
-    #cabd96 75%,
-    #b591c7 100%
-  );
+ #79cc9e 0%,
+    #89bcbc 25%,
+    #bb9eea 50%,
+    #ca96b9 75%,
+    #c791c4 100%);
   border-image-slice: 1;
   border-bottom: 1px solid #ccc;
   background-color: rgb(230, 250, 250);
@@ -44,8 +42,20 @@ body {
   font-weight: 700;
 }
 
+.navbar-toggler:hover,
+.navbar-brand:hover,
+.nav-link:hover {
+opacity: 0.8;
+}
+
 .navbar-toggler {
   background: -webkit-linear-gradient(101deg, #d3f4e8, #f2d9f7);
+  -webkit-text-fill-color: transparent;
+}
+
+.nav-link.active {
+  background: var(--main-color);
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
@@ -128,31 +138,27 @@ h3 {
 }
 
 #project-description {
-  background-image: url(/src/images/body1.png);
+  background-image: url(/src/images/pngkey.com-diamond-background-png-7641244.png);
+   background-origin: border-box;
   border-radius: 10px;
-  padding: 8px;
   text-align: center;
   font-family: Georgia, "Times New Roman", Times, serif;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3) !important;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3)!important;
+}
+
+.border#project-description{
+  border-width: 4px!important;
+  color: opacity(0.8);
 }
 
 .project-img-bg {
-  border: solid 10px transparent;
-  background-image: url(/src/images/body.png),
-    linear-gradient(rgba(255, 10, 10, 0), rgba(255, 255, 255, 0)),
-    linear-gradient(101deg, #bb85c8, #84baa7);
-  background-origin: border-box;
-  border-radius: 10px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3) !important;
-}
-
-.project-img-bg2 {
-  border: solid 10px transparent;
-  background-image: linear-gradient(
-      rgba(255, 10, 10, 0),
-      rgba(255, 255, 255, 0)
-    ),
-    linear-gradient(101deg, #f9e6fe, #dbfbf0);
+  border: solid 7px transparent;
+  background-image: url(/src/images/body.png), linear-gradient(rgba(255, 10, 10, 0), rgba(255, 255, 255, 0)),
+    linear-gradient(250deg, #79cc9e 0%,
+    #89bcbc 25%,
+    #bb9eea 50%,
+    #ca96b9 75%,
+    #c791c4 100%);
   background-origin: border-box;
   border-radius: 10px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3) !important;
@@ -184,22 +190,25 @@ p {
 }
 
 .primary-link {
+  
+  margin-top: 50px;
+  padding: 14px 25px;
+  border-radius: 30px;
+  box-shadow: 2px 1px 100px rgb(235, 247, 245) inset;
+  border: solid 2px transparent;
   font-weight: 500;
   font-size: 17px;
+  text-align: center;
   text-decoration: none;
   color: var(--main-color);
   font-family: Georgia, "Times New Roman", Times, serif;
   letter-spacing: 1px;
-  margin-top: 50px;
-  padding: 14px 25px;
-  border-radius: 30px;
-  box-shadow: 2px 1px 100px rgb(238, 250, 248) inset;
-  border: solid 3px transparent;
-  background-image: linear-gradient(
+   box-shadow: 1px 1px 100px rgb(238, 250, 248) inset;
+    background-image: linear-gradient(
       rgba(255, 10, 10, 0),
       rgba(255, 255, 255, 0)
     ),
-    linear-gradient(101deg, #bd8bca, #9ccebc);
+    linear-gradient(101deg, #b26fc3, #7abaa4);
   background-origin: border-box;
 }
 
@@ -359,6 +368,10 @@ footer .linkedin-link {
 }
 
 @media (max-width: 900px) {
+  body{
+    padding: 7px;
+  }
+  
 .navbar-brand,
 .nav-link {
   font-weight: 500;
@@ -452,7 +465,7 @@ footer .linkedin-link {
   }
 
   #footer{
-   font-size: 14px;
+   font-size: 16px;
 }
 
 }
@@ -466,4 +479,9 @@ footer .linkedin-link {
   .icons .img-fluid {
     margin-top: 7px;
   }
+
+   #footer{
+   font-size: 15px;
+}
+
 }
