--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,7 @@ opacity: 0.8;
 .navbar-toggler {
   background: -webkit-linear-gradient(101deg, #d3f4e8, #f2d9f7);
   -webkit-text-fill-color: transparent;
+   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2)
 }
 
 .nav-link.active {
@@ -143,7 +144,7 @@ h3 {
   border-radius: 10px;
   text-align: center;
   font-family: Georgia, "Times New Roman", Times, serif;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3)!important;
+  box-shadow: 5px 7px 15px rgba(0, 0, 0, 0.3) !important;
 }
 
 .border#project-description{
@@ -161,7 +162,7 @@ h3 {
     #c791c4 100%);
   background-origin: border-box;
   border-radius: 10px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3) !important;
+  box-shadow: 5px 7px 15px rgba(0, 0, 0, 0.3) !important;
 }
 
 #row-about-me-page {
@@ -190,7 +191,6 @@ p {
 }
 
 .primary-link {
-  
   margin-top: 50px;
   padding: 14px 25px;
   border-radius: 30px;
@@ -314,6 +314,11 @@ p {
   color: var(--main-color);
 }
 
+.btn-shadow{
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3) !important;
+  border-radius: 10px;
+}
+
 #par-follow-projects {
   font-weight: 500;
   font-size: 17px;
@@ -321,7 +326,7 @@ p {
 }
 
 .secondary-link {
-  font-weight: 500;
+   font-weight: 500;
   font-size: 17px;
   text-align: center;
   text-decoration: none;
@@ -365,6 +370,22 @@ footer .linkedin-link {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
    font-size: 18px;
+}
+
+.footer-contact-page{
+  font-size: 20px!important;
+  text-align: center;
+ }
+
+#gitHub-link {
+  text-decoration: underline!important;
+ background: -webkit-linear-gradient(101deg, #199a6d, #85019c);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#gitHub-link:hover {
+opacity: 0.8;
 }
 
 @media (max-width: 900px) {
