--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@ body {
   background-image: url(/src/images/body.png),
     linear-gradient(110deg, #9bf7d7, #eeaefa);
   color: var(--main-color);
+  -webkit-background-clip: content-box;
 }
 
 .navbar {
@@ -93,8 +94,21 @@ h1,
 h2,
 h3 {
   letter-spacing: 1px;
+  opacity: 1;
+  animation: ani 0s ease-in-out forwards 0s;
+}
+
+.description-me h3 {
+  letter-spacing: 1px;
   opacity: 0;
-  animation: ani 2s ease-in-out forwards 0s;
+  animation: ani 0s ease-in-out forwards 0s;
+  font-size: 40px !important;
+  margin-top: 10px !important;
+  margin-bottom: 35px !important;
+}
+
+.description-me .row {
+  margin-top: 0px !important;
 }
 
 @keyframes ani {
@@ -140,6 +154,10 @@ h3 {
   margin-top: 60px;
 }
 
+#col-skills-icons {
+  margin: 0px !important;
+}
+
 #project-description {
   background-image: url(/src/images/pngkey.com-diamond-background-png-7641244.png);
   background-origin: border-box;
@@ -149,9 +167,18 @@ h3 {
   box-shadow: 5px 7px 15px rgba(0, 0, 0, 0.3) !important;
 }
 
+.project-description {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .border#project-description {
   border-width: 5px !important;
   border-color: #d5cbd7 !important;
+}
+
+#weather-img {
+  height: auto;
 }
 
 .project-img-bg {
@@ -169,10 +196,6 @@ h3 {
   background-origin: border-box;
   border-radius: 10px;
   box-shadow: 5px 7px 15px rgba(0, 0, 0, 0.3) !important;
-}
-
-#row-about-me-page {
-  margin-top: 0px;
 }
 
 #hero-img,
@@ -232,7 +255,6 @@ p {
 #hero-img {
   display: block;
   margin: 0 auto;
-  width: 100%;
 }
 
 .projects-link,
@@ -385,6 +407,27 @@ footer .linkedin-link {
   opacity: 0.8;
 }
 
+@media (max-width: 995px) {
+  #project-description {
+    width: 50%;
+  }
+
+  #project-description p {
+    font-size: 18px;
+    margin-bottom: -35px !important;
+  }
+
+  #project-description h4 {
+    font-size: 22px;
+    margin-top: 5px !important;
+    margin-bottom: 7px !important;
+  }
+
+  .description-me h3 {
+    font-size: 32px !important;
+  }
+}
+
 @media (max-width: 900px) {
   body {
     padding: 7px;
@@ -437,11 +480,6 @@ footer .linkedin-link {
     font-size: 40px;
   }
 
-  #project-description {
-    margin-top: 20px;
-    width: 96%;
-  }
-
   .project-img-bg {
     display: block;
     margin: 0 auto;
@@ -459,9 +497,6 @@ footer .linkedin-link {
   .primary-link {
     font-size: 14px;
     padding: 10px 20px;
-  }
-  .project-img-bg#hero {
-    width: 70%;
   }
 
   .icons {
@@ -512,7 +547,10 @@ footer .linkedin-link {
 
   #project-description {
     width: 94%;
+    margin-top: 20px;
+    margin-bottom: 30px;
   }
+
   .icons {
     font-size: 11px;
     margin: 0 auto;
@@ -540,6 +578,22 @@ footer .linkedin-link {
 
   .description-me .container {
     margin-top: 60px !important;
+  }
+
+  #project-description {
+    width: 50%;
+    margin: 0 !important;
+  }
+
+  #project-description p {
+    font-size: 16px;
+    margin-bottom: -33px !important;
+  }
+
+  #project-description h4 {
+    font-size: 22px;
+    margin-top: 5px !important;
+    margin-bottom: 7px !important;
   }
 
   .icons {
@@ -600,5 +654,13 @@ footer .linkedin-link {
 
   #facebook-link {
     margin-bottom: 450px !important;
+  }
+}
+
+@media (width: 1280px) {
+  .description-me h3 {
+    font-size: 30px !important;
+    margin-top: 5px !important;
+    margin-bottom: 7px !important;
   }
 }
