--- a/src/style.css
+++ b/src/style.css
@@ -275,7 +275,7 @@ p {
 
 .icons {
   display: flex;
-  justify-content: row;
+  justify-content: space-evenly;
   margin-top: 20px;
   color: var(--main-color);
   font-family: var(--secondary-font-family);
